@@ -1,125 +1,0 @@
-#root {
-  
-  /* max-width: 1380px; */
-  margin: 0 auto;
-  text-align: center;
-  color: white;
-}
-
-.pageLayout{
-  
-  display: flex;
-  flex-direction: column;
-  min-height: 99vh;
-  max-height: 100vh;
-  
-}
-
-.content{
-  flex-grow: 1;
-  align-self: center;
-}
-
-.content a{
-  color: white;
-  text-decoration: underline;
-}
-
-.content li{
-  list-style:none
-}
-.content a:hover{
-  color:rgb(10, 195, 127)
-}
-body {
-  background-color: #1b7add;
-  
-}
-
-.nav {
-  width:1380px;
-  display: flex;
-  justify-content: space-evenly;
-}
-.nav a{
-  color:white
-}
-
-.nav a:hover{
-  color:rgb(10, 195, 127)
-}
-
-.footer a{
-  color: white;
-  text-decoration: underline;
-}
-
-.footer a:hover{
-  color:rgb(10, 195, 127)
-}
-
-.userInfo{
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-}
-
-.userInfo_col {
-  grid-row: 1;
-}
-
-.filelist {
-  /* position: relative; */
-  display: flex;
-}
-
-.filename {
-  flex: 3;
-  text-align: start;
-  padding-right: 10px;
-}
-
-.btnContainer {
-  align-content: end;
-
-  /* flex-shrink: 1; */
-}
-
-.button{
-  background-color: #1776d9;
-  border:none;
-  text-align: end;
-}
-
-.button:hover{
-  background-color: aquamarine;
-  border:none;
-}
-
-.rm-file-button {
-  background-color: #1776d9;
-  border:none;
-  text-align: end;
-}
-
-.rm-file-button:hover{
-  background-color: #dc4269;
-  border:none;
-}
-
-.sessionDataTable{
-  margin: 40px;
-  padding: 0 20px;
-  border: 1px solid floralwhite;
-}
-
-.subsessions tr{
-
-  border-bottom: 1px solid floralwhite;
- }
-
-.subsessions{
-  border: 2px solid black;
-  
-  /* color: red; */
-  
-}
