@@ -1,19 +1,21 @@
-import { BrowserRouter, Routes, Route } from 'react-router-dom'
+import { Routes, Route } from 'react-router-dom'
 import { useState } from 'react'
-import './App.css'
+// import './App.css'
 import Home from './layout/Home'
 import User from './layout/User'
 import Users from './layout/Users'
 import Session from './layout/Session'
 import Sessions from './layout/Sessions'
 import Dashboard from './layout/Dashboard'
+import Nav from './components/Nav'
+import Footer from './components/Footer'
 function App() {
   const [count, setCount] = useState(0)
 
   return (
     <>
       
-      <BrowserRouter>
+      <Nav/>
       <Routes>
         <Route path="/" element={<Home />} />
         <Route path="User" element={<User />} />
@@ -22,7 +24,7 @@ function App() {
         <Route path="Sessions" element={<Sessions />}/>
         <Route path="Dashboard" element={<Dashboard />} />    
       </Routes>
-      </BrowserRouter>
+      <Footer/>
       
     </>
   )
