@@ -1,15 +1,12 @@
 import { Link, useLocation } from "react-router-dom";
 import { useState, useEffect } from "react";
 import axios from "axios";
-import Nav from "../components/Nav";
-import Footer from "../components/Footer";
 import Presenting from "../components/Presenting";
 
 function User(props) {
 const location = useLocation();
 const user_id = location.state.user_id;
 const [user, setUser] = useState([])
-console.log(props);
 useEffect(() => {
   getUser(user_id);  
 }, []);
@@ -22,7 +19,6 @@ function getUser(id) {
 }
 
 return <div className="pageLayout">
-<Nav/>
 <div className="content">  
   <h2>User Info</h2>
     <div className="userInfo">
@@ -41,7 +37,6 @@ return <div className="pageLayout">
     </div>         
     <Presenting state={{user_id}}/>
 </div>
-<Footer/>  
 </div>;
 }
 
